<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="165dp"
                    android:layout_height="35dp"
                    android:text="@string/coursesSpinner_label" />

                <Spinner
                    android:id="@+id/courses_name"
                    android:layout_width="219dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#16552e"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/newPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPrice_label" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/updatePrice_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/error"
            android:textColor="#F00" />

    </LinearLayout>

    <TextView
        android:id="@+id/priceDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />


</LinearLayout>